    cvs-buildpackage
  * mergechanges:
    + Update for the new .changes format introduced with dpkg 1.14.17:
      - Handle Checksums-Sha(1|256)
      - Only allow .changes files with the same Format to be merged
      - Reject .changes files with unsupported Formats or Checksums fields
  * rmadison: Allow custom shorthand URLs to be defined (Closes: #472922)

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Wed, 09 Apr 2008 18:39:33 +0100

devscripts (2.10.25) unstable; urgency=low

  [ Adam D. Barratt ]
  * debchange: Escape arguments to --local (Closes: #475034)
  * debdiff: Ensure arguments to --exclude are properly quoted in case they
    contain shell meta-characters (Closes: #475075)
  * debsign:
    + Add support for the new Checksums-Sha* .changes file fields
      introduced by dpkg 1.14.17 (Closes: #474949)
    + Abort if any unknown Checksums-* fields are found in the .changes
      file
    + Abort if the Format field of the .changes file is unsupported
      (greater than 1.8, less than 1.7 or non-numeric)
    + Use a case-insensitive search for field names

  [ James Vega ]
  * debian/control: Set subversion as the first VCS Recommends alternative.

 -- Martin Zobel-Helas <zobel@debian.org>  Wed, 09 Apr 2008 16:04:36 +0200

devscripts (2.10.24) unstable; urgency=low

  [ Martin Zobel-Helas ]
  * Don't look for debian/control if invoked with -c. We also then are not
    looking for NMUs. (Closes: #474564)

  [ Adam D. Barratt ]
  * debchange:
    + Add a DEBCHANGE_AUTO_NMU configuration file option allowing the NMU
      heuristics introduced in 2.10.21 to be disabled. Based on a patch by
      gregor herrmann
    + Fix and improve some manpage formatting. Thanks gregor herrmann
    + Skip NMU detection when creating a new changelog 
    + Fix NEWS files in combination with NMU versioning 
    + Do not trigger NMU detection if the current changelog was authored
      by the current user
    + Fix uninitialised variable warning if Uploaders is empty