@@ -405,6 +405,10 @@ determine it.  If this option is used without \fB\-\-package\fR, then
 (so that \fIdebian/changelog\fR can be found simply by stepping up
 through the tree).
 .TP
+\fB\-\-download\-version\fR \fIversion\fR
+Specify the version which the upstream release must match in order to be
+considered, rather than using the release with the highest version.
+.TP
 .B \-\-verbose
 Give verbose output.
 .TP
