@@ -31,6 +31,8 @@ devscripts (2.10.26) UNRELEASED; urgency=low
       - Only allow .changes files with the same Format to be merged
       - Reject .changes files with unsupported Formats or Checksums fields
   * rmadison: Allow custom shorthand URLs to be defined (Closes: #472922)
+  * uscan: Allow a particular upstream release to be downloaded rather than
+    the most recent (assuming it is in the list retrieved by the watch file)
 
  -- Adam D. Barratt <adam@adam-barratt.org.uk>  Wed, 09 Apr 2008 18:39:33 +0100
 
